--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "cookie-session": "^2.1.0",
         "dotenv": "^16.4.5",
         "express": "^4.20.0",
