--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@material-tailwind/react": "^2.1.10",
     "apexcharts": "^3.54.0",
     "chart.js": "^4.4.4",
+    "lucide-react": "^0.447.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
